--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-ALURAFLIX
+<header>ALURAFLIX</header>
 
-Bruno & Barretto - Sou Eu Na Vida | DVD Outro Patamar
-#Bruno&Barreto
+<h1>Bruno & Barretto - Sou Eu Na Vida | DVD Outro Patamar</h1>
+<P>#Bruno&Barreto</P>
+
+
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Kxd0kSNX2BU?si=gDKtaCDTn5uOkgdT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
