--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<body>
+
 <header>ALURAFLIX</header>
 
 <h1>Bruno & Barretto - Sou Eu Na Vida | DVD Outro Patamar</h1>
@@ -7,3 +9,7 @@
 
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Kxd0kSNX2BU?si=gDKtaCDTn5uOkgdT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+
+
+</body>
